containerization config done